add routes for individual posts

--- a/app/components/subcategory-list/template.hbs
+++ b/app/components/subcategory-list/template.hbs
@@ -1,3 +1,3 @@
 {{#each category.subcategories as |subcategory|}}
-  <h3>{{subcategory.name}}</h3>
+  <h3>{{#link-to 'subcategory' subcategory.id}}{{subcategory.name}}{{/link-to}}</h3>
 {{/each}}
